# smart-home-hvac-controller

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
docs/: hardware-notes.md
ha-config/: automations.yaml  configuration.yaml
phone-scripts/: battery-care.sh  grant-location.sh  publish-battery.sh  publish-location.sh  start-ha.sh  termux-boot.sh  termux-setup.sh
src/smarthvac/: __init__.py  battery_care.py  config_generator.py  dashboard.py  desktop_automation.py  orchestrator.py  phone_deployer.py  pid_controller.py  weather_client.py
src/smarthvac/templates/: dashboard.html
tests/integration/: test_full_hvac_loop.py
tests/ui/: conftest.py  test_dashboard.py  test_windows_automation.py
tests/unit/: test_battery_care.py  test_config_generator.py  test_phone_deployer.py  test_pid_controller.py  test_weather_client.py
