[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarthvac"
version = "0.1.0"
description = "24/7 autonomous HVAC brain for Vivax R+ multi-split"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "responses>=0.24",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "pywinauto>=0.6.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
